# iridium-ai

./: .gitignore  CMakeLists.txt  Checkers.hpp  Coin.hpp  Coin4x4.hpp  Connect4-4x4.hpp  Connect4.hpp  Glyph.hpp  Go.hpp  Gomoku.hpp  Iridium.cpp  MCSearch.hpp  Makefile  NMSearch.hpp  README.md  RawTree.hpp  TicTacToe.hpp  TreeNode.hpp  UCT.hpp  UTTT.hpp  accelerations.hpp  iridium-ai.cpp  perft.cpp
iridium-ai/: iridium-ai.sln
iridium-ai/iridium-ai/: Connect4.hpp  RawTree.hpp  iridium-ai.cpp  iridium-ai.vcxproj  iridium-ai.vcxproj.filters
iridium-ai/iridium-ai/Debug/: vc142.idb
iridium-ai/iridium-ai/Debug/iridium-ai.tlog/: iridium-ai.lastbuildstate
src/: BitMatrixTest.cpp  C4bench.cpp  Connect4-4x4.hpp  Connect4.hpp  Go.hpp  Gomoku.hpp  Istus.hpp  MCSearch.hpp  NMSearch.hpp  RAVE.hpp  RawTree.hpp  TicTacToe.hpp  TranspositionTable.hpp  TreeNode.hpp  UCT.hpp  UTTT.hpp  UTTT_benchmark.cpp  UTTTbench.cpp  Zero.hpp  aa.csv  accelerations.hpp  bench  bench.cpp  bench.csv  bench.hpp  codingame.cpp  connect_4_benchmark.cpp  connect_4_benchmark_prof  correctness_test.csv  demo.csv  e_g_test.csv  gen  gmon.out  gomokubench.cpp  iridium-ai.cpp  iridium-ai.hpp  istus_bench  main  main.cpp  mainlinux  (+13 more)
src/data/: e_g_test.csv  final_data_set.csv  profile.txt  search-growth-patterns.xlsx
src/games/: Checkers.hpp  Connect4-4x4.hpp  Connect4.hpp  Go.hpp  Gomoku.hpp  Kalah.hpp  Othello.hpp  RawTree.hpp  TicTacToe.hpp  UTTT2.hpp  UTTTold.hpp
src/tests/: gomoku.cpp
src/utilities/: BitMatrix.hpp  bitset  rng.hpp
